--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,212 @@
-.App {
-  text-align: center;
+body {
+  background-color: #0B2545;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html {
+  scroll-behavior: smooth;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.title {
+  font-size: 3rem;
+  margin-bottom: 2rem;
+  color: var(--color-white);
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+
+
+.navbar {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #134074;
+}
+
+.logo {
+  height: 100%;
+  width: 100px;
+
+}
+
+.logo-responsive {
+  height: 100%;
+  width: 100px;
+
+}
+
+.hidden-nav {
+  display: none;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header .nav-btn {
+  padding: 5px;
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  outline: none;
+  display: none;
+  opacity: 1;
+  font-size: 2rem;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.nav-ul {
+  color: white;
+  display: flex;
+  justify-content: end;
+  font-size: 1.2rem;
+  list-style-type: none;
+  width: 100%;
+  margin-right: 1.5rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.nav-ul li {
+  margin-left: 5rem;
+  color: white;
+
+}
+
+.nav-ul li a {
+  text-decoration: none;
+  color: white;
+}
+
+.nav-ul li a:hover {
+  color: #4596D1;
+}
+
+
+
+.profil-component {
+  background-image: url('./assets/header-background.jpg');
+  background-position: center;
+  background-size: cover;
+  height: 905px;
+
+}
+
+#skills {
+  margin-top: 3rem;
+}
+
+#project {
+  margin-top: 3rem;
+}
+
+.letter-jello:hover {
+  animation: jello-horizontal .9s linear both;
+  color: #4596D1;
+}
+
+.letter-move:hover {
+  animation: jello-horizontal .9s linear both;
+  color: #4596D1;
+}
+
+@keyframes jello-horizontal {
+  0% {
+    transform: scale3d(1, 1, 1)
   }
-  to {
-    transform: rotate(360deg);
+
+  30% {
+    transform: scale3d(1.25, .75, 1)
   }
+
+  40% {
+    transform: scale3d(.75, 1.25, 1)
+  }
+
+  50% {
+    transform: scale3d(1.15, .85, 1)
+  }
+
+  65% {
+    transform: scale3d(.95, 1.05, 1)
+  }
+
+  75% {
+    transform: scale3d(1.05, .95, 1)
+  }
+
+  100% {
+    transform: scale3d(1, 1, 1)
+  }
+}
+
+/* reponsive */
+
+@media screen and (min-width: 360px) and (max-width: 412px) {
+  .profil-component {
+    height: 970px;
+
+  }
+}
+
+@media screen and (min-width: 413px) and (max-width: 480px) {
+  .profil-component {
+    height: 850px;
+
+  }
+}
+
+@media screen and (max-width: 768px) {
+
+  .hidden-nav {
+    display: flex;
+    padding: 10px;
+  }
+
+  header .nav-btn {
+    display: block;
+  }
+
+
+  header nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    gap: 1.5rem;
+    transition: 0.5s;
+    transform: translateY(-100vh);
+  }
+
+  header nav ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5rem;
+  }
+
+
+
+  header .responsive_nav {
+    transform: none;
+  }
+
+  nav .nav-close-btn {
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+  }
+
+  nav a {
+    font-size: 1.5rem;
+  }
+
+  nav img {
+    display: none;
+  }
+
+
+
+
+
+
 }
